--- a/login.html
+++ b/login.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <!-- component -->
+    <div class="relative flex min-h-screen text-gray-800 antialiased flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12">
+        <div class="relative py-3 sm:w-96 mx-auto text-center">
+        <span class="text-2xl font-light ">Login to your account</span>
+        <div class="mt-4 bg-white shadow-md rounded-lg text-left">
+            <div class="h-2 bg-indigo-400 rounded-t-md"></div>
+            <div class="px-8 py-6 ">
+            <label class="block font-semibold"> Username or Email </label>
+            <input type="text" placeholder="Email" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-indigo-500 focus:ring-1 rounded-md">
+            <label class="block mt-3 font-semibold"> Username or Email </label>
+            <input type="password" placeholder="Password" class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-indigo-500 focus:ring-1 rounded-md">
+                <div class="flex justify-between items-baseline">
+                <button type="submit" class="mt-4 bg-indigo-500 text-white py-2 px-6 rounded-md hover:bg-indigo-600 ">Login</button>
+                <a href="#" class="text-sm hover:underline">Forgot password?</a>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
