--- a/register.html
+++ b/register.html
@@ -377,7 +377,6 @@
               </div>
 
               <!-- Riwayat Penyakit -->
-              <!-- nama -->
               <div class="flex -mx-3">
                 <div class="w-full px-3 mb-8">
                   <label for="" class="text-xs font-semibold px-1"
@@ -391,11 +390,13 @@
                         class="mdi mdi-hospital-building text-gray-400 text-lg"
                       ></i>
                     </div>
-                    <input
-                      type="text"
-                      class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
-                      placeholder="Jantung"
-                    />
+                    <select
+                    class="form-select mt-1 w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
+                  >
+                    <option>None</option>
+                    <option>Hipertensi</option>
+                    <option>Penyakit Jantung</option>
+                  </select>
                   </div>
                 </div>
               </div>
