--- a/login.html
+++ b/login.html
@@ -8,6 +8,10 @@
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="flex items-center min-h-screen bg-white dark:bg-gray-900">
