--- a/register.html
+++ b/register.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
-
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
+      rel="stylesheet"
+    />
 
     <script
       src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"
@@ -18,6 +19,7 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
 
+    <!-- ICON -->
     <style>
       @import url("https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.min.css");
     </style>
@@ -391,12 +393,12 @@
                       ></i>
                     </div>
                     <select
-                    class="form-select mt-1 w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
-                  >
-                    <option>None</option>
-                    <option>Hipertensi</option>
-                    <option>Penyakit Jantung</option>
-                  </select>
+                      class="form-select mt-1 w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500"
+                    >
+                      <option>None</option>
+                      <option>Hipertensi</option>
+                      <option>Penyakit Jantung</option>
+                    </select>
                   </div>
                 </div>
               </div>
