--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- TOPBAR -->
-    <nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <nav class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0 z-50">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
@@ -211,9 +211,6 @@
             Sign In / Sign Up
           </a>
         </div>
-        <!-- <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-                <img src="https://unsplash.com/photos/kyQaQ25_NsA" alt="mockup">
-            </div>                 -->
       </div>
     </section>
 
@@ -303,7 +300,7 @@
           </p>
         </div>
         <div
-          class="md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
+          class="md:text-left text-center"
         >
           <div class="w-full p-4">
             <h2
@@ -333,7 +330,15 @@
         </div>
       </div>
     </footer>
+    <!-- END OF FOOTER -->
 
+    <!-- CAMERA BUTTON -->
+    <button class="p-0 w-12 h-12 lg:w-14 lg:h-14 bg-indigo-600 rounded-full hover:bg-indigo-700 active:shadow-lg mouse shadow transition ease-in duration-200 focus:outline-none fixed bottom-4 right-4">
+      <i class="mdi mdi-camera w-6 h-6 text-2xl lg:justify-center lg:text-center lg:items-center inline-block text-white"></i>
+    </button>
+    <!-- END OF CAMERA BUTTON -->
+
+    
     <!-- SCRIPT -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
   </body>
